masonry/src/widget/snapshots/masonry__widget__progress_bar__tests___25_percent_progressbar.snap
---
source: masonry/src/widget/progress_bar.rs
expression: harness.root_widget()
---
SizedBox(
    ProgressBar<25%>,
)
