masonry/src/widget/snapshots/masonry__widget__progress_bar__tests___75_percent_progressbar.snap
---
source: masonry/src/widget/progress_bar.rs
expression: harness.root_widget()
snapshot_kind: text
---
SizedBox(
    ProgressBar<75%>(
        Label<75%>,
    ),
)
